--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			{% if site.author.linkedin %}
 				<a href="https://linkedin.com/in/{{site.author.linkedin}}" target="_blank"><img src="assets/images/icon/linkedin.svg" class="social-icon"></a>
 			{% endif %}
-			<a href="about"><img src="assets/images/icon/me.svg" class="social-icon"></a>
+			<a href="pages/about"><img src="assets/images/icon/me.svg" class="social-icon"></a>
 			<br>
 			{{ site.author.bio }}
 			<br>
@@ -37,12 +37,12 @@
 	<div class="navmenu">
 			<a href="/">Blog</a>·
 			<!--<a href="projects">Proyectos</a>·-->
-			<a href="bookshelf">Lectura</a>·
-			<a href="projects">Proyectos</a>·
-			<a href="log">Novedades</a>·
-			<a href="photo">Fotografía</a>·
-			<a href="about">Sobre mí</a>·
-			<a href="now">🔴 Ahora</a>
+			<!--<a href="projects">Proyectos</a>·-->
+			<a href="pages/log">Novedades</a>·
+			<a href="pages/photo">Fotografía</a>·
+			<a href="pages/bookshelf">Lectura</a>·
+			<a href="pages/about">Sobre mí</a>·
+			<a href="pages/now">🌱 Ahora</a>
 
 	</div>
 
