--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
 			<!--<a href="projects">Proyectos</a>·-->
 			<!--<a href="projects">Proyectos</a>·-->
 			<a href="pages/log">Novedades</a>·
-			<a href="pages/photo">Fotografía</a>·
-			<a href="pages/bookshelf">Lectura</a>·
-			<a href="pages/about">Sobre mí</a>·
+			<!--<a href="pages/photo">Fotografía</a>·-->
+			<!--<a href="pages/bookshelf">Lectura</a>·-->
+			<!--<a href="pages/about">Sobre mí</a>·-->
 			<a href="pages/now">🌱 Ahora</a>
 
 	</div>
