--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,11 @@
 			<a href="/">Blog</a>·
 			<!--<a href="projects">Proyectos</a>·-->
 			<!--<a href="projects">Proyectos</a>·-->
-			<a href="pages/log">Novedades</a>·
+			<a href="pages/log.html">Novedades</a>·
 			<!--<a href="pages/photo">Fotografía</a>·-->
 			<!--<a href="pages/bookshelf">Lectura</a>·-->
 			<!--<a href="pages/about">Sobre mí</a>·-->
-			<a href="pages/now">🌱 Ahora</a>
+			<a href="pages/now.html">🌱 Ahora</a>
 
 	</div>
 
