--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 			<!--<a href="projects">Proyectos</a>·-->
 			<a href="pages/log.html">Novedades</a>·
 			<!--<a href="pages/photo">Fotografía</a>·-->
-			<!--<a href="pages/bookshelf">Lectura</a>·-->
+			<a href="pages/bookshelf">Lectura</a>·
 			<!--<a href="pages/about">Sobre mí</a>·-->
 			<a href="pages/now.html">🌱 Ahora</a>
 
@@ -48,7 +48,7 @@
 
 	{{ content }}
 	<div class="footer">
-		<span>Made with <font color="red">♥</font> on Earth, a minimalist Jekyll Theme by <a href="https://hakan.io"><b>Hakan</b></a></span>
+		<span>Jekyll Theme by <a href="https://hakan.io"><b>Hakan</b></a></span>
 	</div>
 </div>
 {% include footer.html %}
