--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,8 @@
 			<!--<a href="pages/photo">Fotografía</a>·-->
 			<a href="pages/bookshelf.html">Lectura</a>·
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
-			<a href="pages/now.html">🌱 Ahora</a>
+			<a href="pages/now.html">🌱 Ahora</a>·
+			<a href="http://www.ochoenpunto.com" target="_blank">🕗 8am</a>
 
 	</div>
 
