New post, log update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,10 +35,10 @@
 	</div>
 
 	<div class="navmenu">
-			<a href="/">Blog</a>·
+			<a href="/">Notas</a>·
 			<!--<a href="projects.html">Proyectos</a>·-->
 			<!--<a href="projects.html">Proyectos</a>·-->
-			<a href="pages/log.html">Novedades</a>·
+			<a href="pages/log.html">Log</a>·
 			<!--<a href="pages/photo">Fotografía</a>·-->
 			<a href="pages/bookshelf.html">Lectura</a>·
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
