Menu style minor update (only icons)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,11 +40,11 @@
 			<!--<a href="projects.html">Proyectos</a>·-->
 			<a href="pages/log.html">💬 Log</a>·
 			<!--<a href="pages/photo">Fotografía</a>·-->
-			<a href="pages/bookshelf.html">📚 Lectura</a>·
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
 			<a href="pages/now.html">🌱 Ahora</a>·
-			<a href="http://www.ochoenpunto.com" target="_blank">🕗 8am</a>·
-			<a href="https://www.getrevue.co/profile/ebenimeli" target="_blank">🗞 Boletín</a>
+			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
+			<a href="pages/bookshelf.html">📚</a>·
+			<a href="https://www.getrevue.co/profile/ebenimeli" target="_blank">🗞</a>
 
 	</div>
 
