New post, log update, style minor changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,10 +38,10 @@
 			<a href="/">📌 Notas</a>·
 			<!--<a href="projects.html">Proyectos</a>·-->
 			<!--<a href="projects.html">Proyectos</a>·-->
-			<a href="pages/log.html">💬 Log</a>·
+			<a href="pages/log.html">💬</a>·
 			<!--<a href="pages/photo">Fotografía</a>·-->
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
-			<a href="pages/now.html">🌱 Ahora</a>·
+			<a href="pages/now.html">🌱</a>·
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
 			<a href="pages/bookshelf.html">📚</a>·
 			<a href="https://www.getrevue.co/profile/ebenimeli" target="_blank">🗞</a>
