--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{site.lang}}" data-theme="dark">
+<html lang="{{site.lang}}" data-theme="light">
 	<head>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-4705752-1"></script>
