--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,14 @@
 layout: default
 ---
 {% if page.mathjax %}
+<!-- cdn.mathjax.org to cdnjs.cloudflare.com -->
+<!--
 <script type="text/javascript"
-    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="https://cdnjs.cloudflare.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+-->
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 {% endif %}
 <div class="post-header">
