Log and menu update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<div class="navmenu">
-			<a href="/">📌 Notas</a>·
+			<a href="/">📌</a>·
 			<!--<a href="projects.html">Proyectos</a>·-->
 			<!--<a href="projects.html">Proyectos</a>·-->
 			<a href="pages/log.html">💬</a>·
