Style updated (title colour) and pictures uploaded

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,13 +233,13 @@ div.book-data {
 }
 
 h1 {
-  color: Steelblue;
+  /*color: Steelblue;*/
   /*color: White;*/
 
 }
 
 .book h1 {
-  color: Steelblue;
+  /*color: Steelblue;*/
   margin-bottom: 0px;
 }
 
