--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,7 +366,7 @@ strong {
 
 table.habits tr td {
   border: 1px dotted #696969;
-  text-align: center;
+  text-align: left;
   font-size: 14px;
 }
 
