--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
 			<a href="pages/now.html">🌱</a>·
 			<a href="pages/bookshelf.html">📚</a>·
+			<a href="pages/watchlist.html">🍿</a>·			
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
 			<a href="http://www.esferatic.com" target="_blank">👨🏻‍💻</a>·
 			<a href="https://www.getrevue.co/profile/ebenimeli" target="_blank">🗞</a>
