--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,10 @@
   		gtag('config', 'UA-4705752-1');
 		</script>
 
-		<script defer src="https://app.embed.im/snow.js"></script>
+		<!-- Script para simular nieve por Navidad -->
+		<!--
+			<script defer src="https://app.embed.im/snow.js"></script>
+		-->
 
 
 		<meta charset="utf-8">
