--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,19 +432,24 @@ table.habits tr.total td {
 }
 
 .zoom {
-        width: 300px;
-        height: 300px;
-        overflow: hidden;
-        margin: 0 auto;
-        display: inline;
-    }
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  margin: 0 auto;
+  display: inline;
+}
 
-    .zoom img {
-        /*width: 100%;*/
-        /*transition: 0.5s all ease-in-out;*/
-        transition: 0.5s;
-    }
+.zoom img {
+  /*width: 100%;*/
+  /*transition: 0.5s all ease-in-out;*/
+  transition: 0.5s;
+}
 
-    .zoom:hover img {
-        transform: scale(4.0);
-    }
+.zoom:hover img {
+  transform: scale(4.0);
+}
+
+img.gallerypic {
+  padding: 2px;
+  border: .25px solid #696969;
+}
