--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
 			<a href="pages/watchlist.html">🍿</a>·
 			<!--<a href="pages/photos.html">📷</a>·-->
 			<a href="pages/podcasts.html">🎧</a>·
+			<a href="pages/chess.html">♖</a>·
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
 			<a href="http://www.esferatic.com" target="_blank">👨🏻‍💻</a>·
 			<a href="https://www.getrevue.co/profile/ebenimeli" target="_blank">🗞</a>
