--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,5 +465,5 @@ ul.tasks li {
 .blog-post-content a {
   text-decoration: underline;
   text-decoration-style: solid;
-  text-decoration-color: #696969;
+  text-decoration-thickness: 1px;
 }
