--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
 			<!--<a href="pages/photos.html">📷</a>·-->
 			<a href="pages/podcasts.html">🎧</a>·
 			<a href="pages/chess.html">♖</a>·
+			<a href="pages/goals.html">🏁</a>·
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
 			<a href="http://www.esferatic.com" target="_blank">👨🏻‍💻</a>
 	</div>
