--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,8 +49,11 @@
 			<!--<a href="pages/chess.html">♖</a>·-->
 			<a href="pages/buy.html">🛒</a>·
 			<a href="pages/goals.html">🏁</a>·
+			<a href="pages/projects.html">💡</a>
+			<!--
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
 			<a href="http://www.esferatic.com" target="_blank">👨🏻‍💻</a>
+			-->
 	</div>
 
 	{{ content }}
