--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 			<a href="pages/podcasts.html">🎧</a>·
 			<!--<a href="pages/chess.html">♖</a>·-->
 			<a href="pages/buy.html">🛒</a>·
-			<a href="pages/goals.html">🏁</a>·
+			<!--<a href="pages/goals.html">🏁</a>·-->
 			<a href="pages/projects.html">💡</a>
 			<!--
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
