Chess section enabled

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 			<a href="pages/watchlist.html">🍿</a>·
 			<!--<a href="pages/photos.html">📷</a>·-->
 			<a href="pages/podcasts.html">🎧</a>·
-			<!--<a href="pages/chess.html">♖</a>·-->
+			<a href="pages/chess.html">♖</a>·
 			<a href="pages/buy.html">🛒</a>·
 			<!--<a href="pages/goals.html">🏁</a>·-->
 			<a href="pages/projects.html">💡</a> 
