--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
 		<!--
 			<script defer src="https://app.embed.im/snow.js"></script>
 		-->
+		<script async src="https://basicons.xyz/embed.js"> </script>
 
 
 		<meta charset="utf-8">
