--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,8 @@
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
 			<a href="http://www.esferatic.com" target="_blank">👨🏻‍💻</a>
 			-->
+<!--			<a href="pages/me.html">🙋🏻‍♂️</a>-->
+
 	</div>
 
 	{{ content }}
