--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 			<a href="pages/now.html">🌱</a>·
 			<a href="pages/bookshelf.html">📚</a>·
 			<a href="pages/watchlist.html">🍿</a>·
-			<!--<a href="pages/photos.html">📷</a>·-->
+			<a href="pages/photo.html">📷</a>· 
 			<a href="pages/podcasts.html">🎧</a>·
 			<a href="pages/chess.html">♖</a>·
 			<a href="pages/buy.html">🛒</a>·
