Container padding added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,10 @@ body{
 
   margin-left: auto;
   margin-right: auto;
+  padding-left: 7px;
+  padding-right: 7px;
 }
+
 .post-container{
   display: flex;
   flex-direction: row;
