--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,3 +475,21 @@ ul.tasks li {
 .book-list a {
   text-decoration: none;
 }
+
+img.profile {
+  width: 200px;
+  float: right;
+  padding-left: 10px;
+
+  display: inline;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.image-cropper {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+}
