--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,7 @@
 	</div>
 
 	<div class="navmenu">
-			<a href="/">📌</a>·
-			<!--<a href="projects.html">Proyectos</a>·-->
-			<!--<a href="projects.html">Proyectos</a>·-->
+			<a href="/">✏️</a>·
 			<a href="pages/log.html">💬</a>·
 			<!--<a href="pages/photo">Fotografía</a>·-->
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
