--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,11 @@ body{
   margin-bottom: 20px;
 }
 .profile-image-container{width: 40%;}
-.profile-image{width: 128px; height: 128px; border-radius: 50%; transition: transform .2s;}
+.profile-image{
+  width: 128px; height: 128px; border-radius: 50%; transition: transform .2s;
+  border: 1px solid #696969;
+
+}
 .profile-image:hover{transform: scale(1.05);}
 .profile-about{width:60%; text-align: right;}
 
