--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -685,3 +685,10 @@ img.profile {
   overflow: hidden;
   border-radius: 50%;
 }
+
+.status {
+  background: var(--bg-hover-color);
+  font-weight: bold;
+  font-size: .9em;
+  border: 0.5px solid;
+}
