--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -692,3 +692,15 @@ img.profile {
   font-size: .9em;
   border: 0.5px solid;
 }
+
+.urgent {
+  background: red;
+  color: white;
+  font-weight: bold;
+  font-size: .9em;
+  border: 0.5px solid;
+}
+
+.urgent a.post-title {
+  color: white;
+}
