--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -694,7 +694,7 @@ img.profile {
 }
 
 .urgent {
-  background: red;
+  background: #DC143C;
   color: white;
   font-weight: bold;
   font-size: .9em;
