--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
   justify-content: space-between;
   /*width: 60%;*/
   width: 60%;
-  text-align: justify;
+  /*text-align: justify;*/
 
   margin-left: auto;
   margin-right: auto;
