--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 			<a href="pages/log.html">💬</a>·
 			<!--<a href="pages/photo">Fotografía</a>·-->
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
-			<a href="pages/now.html">🌱</a>·
+			<!--<a href="pages/now.html">🌱</a>·-->
 			<a href="pages/bookshelf.html">📚</a>·
 			<a href="pages/watchlist.html">🍿</a>·
 			<a href="pages/photo.html">📷</a>· 
