Bookshelf progress bar text now with date

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{site.lang}}" data-theme="light">
 	<head>
+		<link rel="icon" type="image/x-icon" href="/assets/images/profile_books.ico">
+
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-4705752-1"></script>
 		<script>
