--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
 			<!--<a href="pages/about.html">Sobre mí</a>·-->
 			<!--<a href="pages/now.html">🌱</a>·-->
 			<a href="pages/bookshelf.html">📚</a>·
+			<!--<a href="pages/music.html">🎵</a>·-->
 			<a href="pages/watchlist.html">🍿</a>·
 			<a href="pages/photo.html">📷</a>· 
 			<a href="pages/podcasts.html">🎧</a>·
