--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 
 		<!-- Script para simular nieve por Navidad -->
 		
-			<script defer src="https://app.embed.im/snow.js"></script>
+		<!--<script defer src="https://app.embed.im/snow.js"></script>-->
 		
 		<script async src="https://basicons.xyz/embed.js"> </script>
 
