--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
 			{% if site.author.linkedin %}
 				<a href="https://linkedin.com/in/{{site.author.linkedin}}" target="_blank"><img src="assets/images/icon/linkedin.svg" class="social-icon"></a>
 			{% endif %}
+			{% if site.author.substack %}
+				<a href="http://{{site.author.substack}}.substack.com/" target="_blank"><img src="assets/images/icon/substack.svg" class="social-icon"></a>
+			{% endif %}
+
 			<!--
 			<a href="pages/about.html"><img src="assets/images/icon/me.svg" class="social-icon"></a>
 			-->
