Documentation website added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
 			<!--<a href="pages/goals.html">🏁</a>·-->
 			<!--<a href="pages/projects.html">💡</a>-->
 			<a href="pages/newsletter.html">🗞️</a> 
+			<a href="http://docs.ebenimeli.org" target="_blank">💾</a> 
 			<!--<a href="pages/thanks.html">❤️</a>--> 
 			<!--
 			<a href="http://www.ochoenpunto.com" target="_blank">🕗</a>·
